Refactor `it` module.
* Improve unit tests of resource managers by reducing the number of mocks.
* Call statement.close() in Jdbc resource manager methods.
* Remove heuristic based filter function for throughput calculations.
* Move MetricsConfiguration to LoadTestBase
* Merge GcsArtifactClient and GcsResourceManager
* Make `it` module compatible with Java 8.
* Remove implicit use of the platform default charset, which can result in differing behaviour between JVM executions
* Use Beam vendored guava instead of guava directly where it does not change public API (required in Beam repo),